[gd_scene load_steps=31 format=2]

[ext_resource path="res://menu/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://menu/mainbackground.png" type="Texture" id=2]
[ext_resource path="res://menu/main menu.png" type="Texture" id=3]
[ext_resource path="res://menu/begin.png" type="Texture" id=4]
[ext_resource path="res://menu/level select.png" type="Texture" id=5]
[ext_resource path="res://menu/options.png" type="Texture" id=6]
[ext_resource path="res://menu/exist.png" type="Texture" id=7]
[ext_resource path="res://menu/credits.png" type="Texture" id=8]
[ext_resource path="res://menu/yes.png" type="Texture" id=9]
[ext_resource path="res://menu/no.png" type="Texture" id=10]
[ext_resource path="res://menu/mainbackground3.png" type="Texture" id=11]
[ext_resource path="res://menu/resolution is.png" type="Texture" id=12]
[ext_resource path="res://menu/skin is.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Welfz/Default/WFZSprites100.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Welfz/Skins/WFZ2600.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Welfz/Skins/WFZfirst.png" type="Texture" id=16]
[ext_resource path="res://menu/special.jpg" type="Texture" id=17]
[ext_resource path="res://menu/mainbackground2.png" type="Texture" id=18]
[ext_resource path="res://menu/decision.png" type="Texture" id=19]
[ext_resource path="res://menu/mainbackground4.png" type="Texture" id=20]
[ext_resource path="res://Levels/Level 1.png" type="Texture" id=21]
[ext_resource path="res://Levels/Level 2.png" type="Texture" id=22]
[ext_resource path="res://Levels/testroom.png" type="Texture" id=23]
[ext_resource path="res://menu/mainbackground5.png" type="Texture" id=24]
[ext_resource path="res://menu/ichooseyou.png" type="Texture" id=25]
[ext_resource path="res://Sound/SFX/Proto/Ouch.wav" type="AudioStream" id=26]
[ext_resource path="res://Sound/SFX/Sound/Jump.wav" type="AudioStream" id=27]
[ext_resource path="res://Sound/SFX/Sound/shoot.wav" type="AudioStream" id=28]
[ext_resource path="res://icon.png" type="Texture" id=29]

[sub_resource type="Animation" id=1]
resource_name = "spin"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsMenu/Special3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, -360.0 ]
}

[node name="Main menu" type="Node2D"]
position = Vector2( 2.00001, 0 )
rotation = 6.28319
scale = Vector2( 1.42465, 1.19305 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 170.516, 117.889 )
scale = Vector2( 4.28431, 4.20498 )
texture = ExtResource( 2 )

[node name="mainmenu" type="Sprite" parent="Background"]
position = Vector2( 1.98233, -20.3253 )
scale = Vector2( 0.571466, 0.248776 )
texture = ExtResource( 3 )

[node name="begin" type="Sprite" parent="Background"]
position = Vector2( -1.92334, -12.3642 )
scale = Vector2( 0.245487, 0.248776 )
texture = ExtResource( 4 )

[node name="select" type="Sprite" parent="Background"]
position = Vector2( -1.92334, -7.118 )
scale = Vector2( 0.245487, 0.248776 )
texture = ExtResource( 5 )

[node name="options" type="Sprite" parent="Background"]
position = Vector2( -1.92337, -1.39616 )
scale = Vector2( 0.245487, 0.248776 )
texture = ExtResource( 6 )

[node name="exit" type="Sprite" parent="Background"]
position = Vector2( -1.89876, 4.07691 )
scale = Vector2( 0.245487, 0.248776 )
texture = ExtResource( 7 )

[node name="credits" type="Sprite" parent="Background"]
position = Vector2( -1.89874, 9.77679 )
scale = Vector2( 0.245487, 0.248776 )
texture = ExtResource( 8 )

[node name="yesB" type="Sprite" parent="Background"]
position = Vector2( -20.0758, 15.9367 )
scale = Vector2( 0.245487, 0.248776 )
texture = ExtResource( 9 )

[node name="noB" type="Sprite" parent="Background"]
position = Vector2( 17.7941, 15.9367 )
scale = Vector2( 0.245487, 0.248776 )
texture = ExtResource( 10 )

[node name="OptionsMenu" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 535.808, 117.311 )
scale = Vector2( 4.42061, 4.18435 )
texture = ExtResource( 11 )

[node name="x" type="Label" parent="OptionsMenu"]
margin_left = -35.4339
margin_top = -7.90789
margin_right = -9.43392
margin_bottom = 6.09211
rect_pivot_offset = Vector2( 15.3098, 6.1368 )
text = "x"

[node name="y" type="Label" parent="OptionsMenu"]
margin_left = -3.16759
margin_top = -9.22176
margin_right = 42.8324
margin_bottom = 4.77824
text = "y"

[node name="options2" type="Sprite" parent="OptionsMenu"]
position = Vector2( 0.876999, -19.5682 )
scale = Vector2( 0.588753, 0.248776 )
texture = ExtResource( 6 )

[node name="resolution" type="Sprite" parent="OptionsMenu"]
position = Vector2( -15.6911, -9.2965 )
scale = Vector2( 0.319131, 0.319131 )
texture = ExtResource( 12 )

[node name="skin" type="Sprite" parent="OptionsMenu"]
position = Vector2( -15.6911, 7.86901 )
scale = Vector2( 0.319131, 0.319131 )
texture = ExtResource( 13 )

[node name="Default" type="Sprite" parent="OptionsMenu/skin"]
position = Vector2( -43.0771, 31.9611 )
texture = ExtResource( 14 )
vframes = 12
hframes = 10

[node name="2600" type="Sprite" parent="OptionsMenu/skin"]
position = Vector2( -17.6924, 31.9611 )
texture = ExtResource( 15 )
vframes = 12
hframes = 10

[node name="Double Dragon NES" type="Sprite" parent="OptionsMenu/skin"]
position = Vector2( 1.10364, 5.81134 )
vframes = 12
hframes = 10
frame = 6

[node name="First" type="Sprite" parent="OptionsMenu/skin"]
position = Vector2( 31.5388, 31.9611 )
texture = ExtResource( 16 )
vframes = 12
hframes = 10

[node name="Special4" type="Sprite" parent="OptionsMenu/skin"]
position = Vector2( -42.5127, 27.9705 )
rotation = -4.52622e-006
scale = Vector2( 0.100275, 0.101619 )
texture = ExtResource( 17 )

[node name="ExitMenu" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( -205.821, 117.395 )
scale = Vector2( 4.47988, 4.18734 )
z_index = -1
texture = ExtResource( 18 )

[node name="exit2" type="Sprite" parent="ExitMenu"]
position = Vector2( -0.164787, -20.3196 )
scale = Vector2( 0.512188, 0.284917 )
texture = ExtResource( 7 )

[node name="sure" type="Sprite" parent="ExitMenu"]
position = Vector2( -2.37538, -9.62123 )
rotation = 4.36174e-013
scale = Vector2( 0.508436, 0.531665 )
texture = ExtResource( 19 )

[node name="yes" type="Sprite" parent="ExitMenu/sure"]
position = Vector2( 4.4282, 16.2871 )
rotation = -9.86285e-013
scale = Vector2( 0.461071, 0.49067 )
texture = ExtResource( 9 )

[node name="no" type="Sprite" parent="ExitMenu/sure"]
position = Vector2( 4.42897, 37.0125 )
rotation = -4.93218e-013
scale = Vector2( 0.461, 0.491 )
texture = ExtResource( 10 )

[node name="SelectMenu" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 912.803, 117.49 )
scale = Vector2( 4.44551, 4.19073 )
texture = ExtResource( 20 )

[node name="levelselectdude" type="Sprite" parent="SelectMenu"]
position = Vector2( 1.12413, -19.5683 )
scale = Vector2( 0.545031, 0.248776 )
texture = ExtResource( 5 )

[node name="Level1" type="Sprite" parent="SelectMenu"]
position = Vector2( -24.5249, -8.30695 )
scale = Vector2( 0.169414, 0.152526 )
texture = ExtResource( 21 )

[node name="Level2" type="Sprite" parent="SelectMenu"]
position = Vector2( -5.11102, -8.30695 )
scale = Vector2( 0.169414, 0.152526 )
texture = ExtResource( 22 )

[node name="Level3" type="Sprite" parent="SelectMenu"]
position = Vector2( 14.7529, -8.30695 )
scale = Vector2( 0.169414, 0.152526 )
texture = ExtResource( 23 )

[node name="CreditsMenu" type="Sprite" parent="."]
position = Vector2( 1300.15, 117.963 )
scale = Vector2( 0.89266, 0.89266 )
texture = ExtResource( 24 )

[node name="Special3" type="Sprite" parent="CreditsMenu"]
position = Vector2( 156.383, -90.6586 )
rotation = -6.28319
scale = Vector2( 1.28216, 1.28216 )
z_index = -1
texture = ExtResource( 17 )

[node name="Selected" type="Sprite" parent="."]
position = Vector2( 158.807, 63.277 )
scale = Vector2( 1.15025, 1.67019 )
texture = ExtResource( 25 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 162.187, 114.292 )

[node name="AniPlay" type="AnimationPlayer" parent="."]
pause_mode = 2
playback_process_mode = 0
anims/spin = SubResource( 1 )

[node name="Back" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 49.9489, -49.8427 )
stream = ExtResource( 26 )

[node name="Move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( -19.9967, 750 )
texture = ExtResource( 29 )
